--- a/src/main/resources/templates/blog/about.html
+++ b/src/main/resources/templates/blog/about.html
@@ -15,6 +15,18 @@
 <script type="text/javascript" src="/js/js.js"></script>
 <script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <!-- 返回顶部调用 end-->
+<!--下雪-->
+  <style>
+    #Snow{
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 99999;
+      pointer-events: none;
+    }
+  </style>
 </head>
 <body>
 <!--header--> 
@@ -32,7 +44,9 @@
     <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
   </nav>
 </header>
-<!--header--> 
+<!--header-->
+<!--下雪-->
+<canvas id="Snow"></canvas>
 
 <!--aboutcon-->
 <article class="aboutcon">
@@ -221,8 +235,8 @@ document.write("<font color=red>"+daysold+"</font>天 !");
 <!--时间-->
 <script src="/js/clock.min.js"></script>
 <!--双击文字特效-->
-<script src="/js/striveboybiao-text.js"></script>
+<script src="/js/striveboybiao-text-two.js"></script>
 <!--下雪特效-->
-<script src="/js/striveboybiao-snow.js"></script>
+<script src="/js/striveboybiao-snow-three.js"></script>
 </body>
 </html>
